--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
   <script>
     var deviceName = 'Kapture';
-    var bleService = '0x180F';
-    var bleCharacteristic = '0x2A19';
+    var bleService = 'battery_service';
+    var bleCharacteristic = 'battery_level';
     var bluetoothDeviceDetected;
     var gattCharacteristic;
 1
