--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <!-- <div class="card">
       <div class="card-body">
         <h5 class="card-title">Common issues</h5>
         <div class="accordion" id="accordionExample">
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
