--- a/index.html
+++ b/index.html
@@ -1,51 +1,71 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <title>ALZK</title>
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">WebBLE</a>
-      <div class="d-flex">
-        <button class="btn btn-outline-warning" id="read">Scan</button>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <title>ALZK</title>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">WebBLE</a>
+        <div class="d-flex">
+          <button class="btn btn-outline-warning" id="read">Scan</button>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </head>
 
-</head>
-
-<body>
-
-  <div class="container pt-3">
-    <div class="row">
-
-    </div>
-    <div class="card mb-3">
-      <div class="card-body">
-        <h5>Logger</h5>
-        <div class="row">
-          <div class="col-sm-12 mb-3">
-            <textarea class="form-control text-log" id="textareaNotification" style="height: 200px"></textarea>
-          </div>
-          <div class="col">
-            <button type="button" class="btn btn-dark btn-outline-warning" id="start">Start</button>
-            <button type="button" class="btn btn-dark btn-outline-warning" id="stop">Stop</button>
-          </div>
-          <div class="col">
-            <h4 id="battery_level">Batter Level</h4>
+  <body>
+    <div class="container pt-3">
+      <div class="row"></div>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5>Logger</h5>
+          <div class="row">
+            <div class="col-sm-12 mb-3">
+              <textarea
+                class="form-control text-log"
+                id="textareaNotification"
+                style="height: 200px"
+              ></textarea>
+            </div>
+            <div class="col">
+              <button
+                type="button"
+                class="btn btn-dark btn-outline-warning"
+                id="start"
+              >
+                Start
+              </button>
+              <button
+                type="button"
+                class="btn btn-dark btn-outline-warning"
+                id="stop"
+              >
+                Stop
+              </button>
+            </div>
+            <div class="col">
+              <h4 id="battery_level">Batter Level</h4>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- <div class="card">
+      <!-- <div class="card">
       <div class="card-body">
         <h5 class="card-title">Common issues</h5>
         <div class="accordion" id="accordionExample">
@@ -99,159 +119,182 @@
         </div>
       </div>
     </div> -->
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
 
-  <script>
-    var deviceName = 'Kapture';
-    var bleService = 'battery_service';
-    var bleCharacteristic = 'battery_level';
-    var bluetoothDeviceDetected;
-    var gattCharacteristic;
-1
-    $(document).ready(function () {
+    <script>
+      var deviceName = "Kapture";
+      var bleService = "battery_service";
+      var bleCharacteristic = "battery_level";
+      var bluetoothDeviceDetected;
+      var gattCharacteristic;
+      1;
+      $(document).ready(function () {
+        $("#read").click(function () {
+          if (isWebBluetoothEnabled()) {
+            read();
+          }
+        });
 
-      $('#read').click(function () {
-        if (isWebBluetoothEnabled()) {
-          read();
-        }
-      })
+        $("#start").click(function () {
+          if (isWebBluetoothEnabled()) {
+            if (isWebBluetoothEnabled()) {
+              start();
+            }
+          }
+        });
 
-      $('#start').click(function () {
-        if (isWebBluetoothEnabled()) {
-          if (isWebBluetoothEnabled()) { start() }
-        }
-      })
+        $("#stop").click(function () {
+          if (isWebBluetoothEnabled()) {
+            stop();
+          }
+        });
 
-
-      $('#stop').click(function () {
-        if (isWebBluetoothEnabled()) {
-          stop();
-        }
-      })
-
-      $('#send').click(function () {
-        if (isWebBluetoothEnabled()) {
-          send();
-        }
+        $("#send").click(function () {
+          if (isWebBluetoothEnabled()) {
+            send();
+          }
+        });
       });
 
-    });
+      function isWebBluetoothEnabled() {
+        if (!navigator.bluetooth) {
+          console.log("Web Bluetooth API is not available in this browser!");
+          log("Web Bluetooth API is not available in this browser!");
+          return false;
+        }
 
-    function isWebBluetoothEnabled() {
-      if (!navigator.bluetooth) {
-        console.log('Web Bluetooth API is not available in this browser!');
-        log('Web Bluetooth API is not available in this browser!');
-        return false
+        return true;
       }
 
-      return true
-    }
+      function getDeviceInfo() {
+        let options = {
+          optionalServices: [bleService],
+          filters: [{ name: deviceName }],
+        };
 
-    function getDeviceInfo() {
-      let options = {
-        optionalServices: [bleService],
-        filters: [
-          { "name": deviceName }
-        ]
+        console.log("Requesting any Bluetooth Device...");
+        log("Requesting any Bluetooth Device...");
+        return navigator.bluetooth
+          .requestDevice(options)
+          .then((device) => {
+            bluetoothDeviceDetected = device;
+            $("#read").text("Disconnect");
+          })
+          .catch((error) => {
+            console.log("Argh! " + error);
+            log("Argh! " + error);
+          });
       }
 
-      console.log('Requesting any Bluetooth Device...');
-      log('Requesting any Bluetooth Device...');
-      return navigator.bluetooth.requestDevice(options).then(device => {
-        bluetoothDeviceDetected = device;
-        $('#read').text('Disconnect');
-      }).catch(error => {
-        console.log('Argh! ' + error);
-        log('Argh! ' + error);
-      })
-    }
-
-    function read() {
-      return (bluetoothDeviceDetected ? Promise.resolve() : getDeviceInfo())
-        .then(connectGATT)
-        .then(_ => {
-          console.log('Reading battery level...');
-          return gattCharacteristic.readValue();
-        })
-        .catch(error => {
-          console.log('Waiting to start reading: ' + error);
-          log('Waiting to start reading: ' + error);
-        })
-    }
-
-    function connectGATT() {
-      if (bluetoothDeviceDetected.gatt.connected && gattCharacteristic) {
-        return Promise.resolve()
+      function read() {
+        return (bluetoothDeviceDetected ? Promise.resolve() : getDeviceInfo())
+          .then(connectGATT)
+          .then((_) => {
+            console.log("Reading battery level...");
+            return gattCharacteristic.readValue();
+          })
+          .catch((error) => {
+            console.log("Waiting to start reading: " + error);
+            log("Waiting to start reading: " + error);
+          });
       }
 
-      return bluetoothDeviceDetected.gatt.connect()
-        .then(server => {
-          console.log('Getting GATT Service...');
-          log('Getting GATT Service...');
-          return server.getPrimaryService(bleService);
-        })
-        .then(service => {
-          console.log('Getting GATT Characteristic...');
-          log('Getting GATT Characteristic...');
-          return service.getCharacteristic(bleCharacteristic);
-        })
-        .then(characteristic => {
-          gattCharacteristic = characteristic
-          gattCharacteristic.addEventListener('characteristicvaluechanged', handleChangedValue)
-          document.querySelector('#start').disabled = false;
-          document.querySelector('#stop').disabled = true;
-        })
-    }
+      function connectGATT() {
+        if (bluetoothDeviceDetected.gatt.connected && gattCharacteristic) {
+          return Promise.resolve();
+        }
 
-    function handleChangedValue(event) {
-      let value = event.target.value.getUint8(0);
-      var now = new Date();
-      console.log('> ' + now.getHours() + ':' + now.getMinutes() + ':' + now.getSeconds() + ' battery level is ' + value);
-      $('#battery_level').text(value);
-      log('Battery value ' + value);
-    }
+        return bluetoothDeviceDetected.gatt
+          .connect()
+          .then((server) => {
+            console.log("Getting GATT Service...");
+            log("Getting GATT Service...");
+            return server.getPrimaryService(bleService);
+          })
+          .then((service) => {
+            console.log("Getting GATT Characteristic...");
+            log("Getting GATT Characteristic...");
+            return service.getCharacteristic(bleCharacteristic);
+          })
+          .then((characteristic) => {
+            gattCharacteristic = characteristic;
+            gattCharacteristic.addEventListener(
+              "characteristicvaluechanged",
+              handleChangedValue
+            );
+            document.querySelector("#start").disabled = false;
+            document.querySelector("#stop").disabled = true;
+          });
+      }
 
-    function start() {
-      gattCharacteristic.startNotifications()
-        .then(_ => {
-          console.log('Start reading...');
-          log('Start reading...');
-          document.querySelector('#start').disabled = true;
-          document.querySelector('#stop').disabled = false;
-        })
-        .catch(error => {
-          console.log('[ERROR] Start: ' + error);
-          log('[ERROR] Start: ' + error);
-        })
-    }
+      function handleChangedValue(event) {
+        let value = event.target.value.getUint8(0);
+        var now = new Date();
+        console.log(
+          "> " +
+            now.getHours() +
+            ":" +
+            now.getMinutes() +
+            ":" +
+            now.getSeconds() +
+            " battery level is " +
+            value
+        );
+        $("#battery_level").text(value);
+        log("Battery value " + value);
+      }
 
-    function stop() {
-      gattCharacteristic.stopNotifications().then(_ => {
-        console.log('Stop reading...');
-        log('Stop reading...');
-        document.querySelector('#start').disabled = false;
-        document.querySelector('#stop').disabled = true;
-      })
-        .catch(error => {
-          console.log('[ERROR] Stop: ' + error);
-        })
-    }
+      function start() {
+        gattCharacteristic
+          .startNotifications()
+          .then((_) => {
+            console.log("Start reading...");
+            log("Start reading...");
+            document.querySelector("#start").disabled = true;
+            document.querySelector("#stop").disabled = false;
+          })
+          .catch((error) => {
+            console.log("[ERROR] Start: " + error);
+            log("[ERROR] Start: " + error);
+          });
+      }
 
+      function stop() {
+        gattCharacteristic
+          .stopNotifications()
+          .then((_) => {
+            console.log("Stop reading...");
+            log("Stop reading...");
+            document.querySelector("#start").disabled = false;
+            document.querySelector("#stop").disabled = true;
+          })
+          .catch((error) => {
+            console.log("[ERROR] Stop: " + error);
+          });
+      }
 
-    function log(text) {
-      const now = new Date();
-      const prefixlog = now.getHours() + ':' + now.getMinutes() + ':' + now.getSeconds() + '> ';
+      function log(text) {
+        const now = new Date();
+        const prefixlog =
+          now.getHours() +
+          ":" +
+          now.getMinutes() +
+          ":" +
+          now.getSeconds() +
+          "> ";
 
-      $('.text-log').val($('.text-log').val() + prefixlog + text + '\n');
-    }
-
-  </script>
-
-</body>
-
+        $(".text-log").val($(".text-log").val() + prefixlog + text + "\n");
+      }
+    </script>
+  </body>
 </html>
